--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "app"
-version = "0.1.0"
-authors = ["Tomislav Homan <tomislav.homan@fiveminutes.eu>"]
+name = "conway" # the name of the package
+version = "0.0.0"    # the current version, obeying semver
+authors = ["you@example.com"]
 
 [dependencies]
+rand = "0.3"
